--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,6 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=collabzone;User Id=sa;Password=collabzone@internshipProject1433!;TrustServerCertificate=true"
   },
+  "FrontendOrigin": "http://localhost:80",
   "AllowedHosts": "*"
 }
