Added email verification feature

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,12 @@
     "DefaultConnection": "Server=localhost,1433;Database=collabzone;User Id=sa;Password=collabzone@internshipProject1433!;TrustServerCertificate=true"
   },
   "FrontendOrigin": "http://localhost:80",
+  "EmailSettings": {
+    "SmtpServer": "smtp.office365.com",
+    "SmtpPort": 587,
+    "SmtpUsername": "collabzone-no-reply@outlook.com",
+    "SmtpPassword": "ukbgqxmrebmjgeqm",
+    "SenderEmail": "collabzone-no-reply@outlook.com"
+  },
   "AllowedHosts": "*"
 }
