connected front-end to the api, changed e-mail provider for test,

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,13 +8,16 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=collabzone;User Id=sa;Password=collabzone@internshipProject1433!;TrustServerCertificate=true"
   },
-  "FrontendOrigin": "http://localhost:80",
+  "FrontendOriginSettings": {
+    "FrontendOrigin": "http://localhost:80",
+    "FrontendOriginTest": "http://localhost:5500"
+  },
   "EmailSettings": {
-    "SmtpServer": "smtp.office365.com",
+    "SmtpServer": "smtp.ethereal.email",
     "SmtpPort": 587,
-    "SmtpUsername": "collabzone-no-reply@outlook.com",
-    "SmtpPassword": "ukbgqxmrebmjgeqm",
-    "SenderEmail": "collabzone-no-reply@outlook.com"
+    "SmtpUsername": "bianka.hirthe6@ethereal.email",
+    "SmtpPassword": "2dVd2FP3XK2yCUttQD",
+    "SenderEmail": "bianka.hirthe6@ethereal.email"
   },
   "AllowedHosts": "*"
 }
